--- a/algorithms.html
+++ b/algorithms.html
@@ -1160,7 +1160,7 @@ parallelized and the manner in which they apply the element access functions.</p
 an execution policy object of type <span class='texttt'>execution::sequenced_policy</span> all occur
 in the calling thread of execution.
 [&nbsp;<i>Note:</i><span class='space'></span>
-The invocations are not interleaved; see (<a href='intro.execution'>[intro.execution]</a>).
+The invocations are not interleaved; see <a href='intro.execution'>[intro.execution]</a>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='parallel.exec-3'><div class='marginalizedparent'><a class='marginalized' href='#parallel.exec-3'>3</a></div><p >The invocations of element access functions in parallel algorithms invoked with
 an execution policy object of type <span class='texttt'>execution::parallel_policy</span> are
 permitted to execute in either the invoking thread of execution or in a
