--- a/basic.html
+++ b/basic.html
@@ -155,7 +155,7 @@ struct C {
 <i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i> (<a href='dcl.type.elab'>[dcl.type.elab]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='def-5'><div class='marginalizedparent'><a class='marginalized' href='#def-5'>5</a></div><p ><span class='indexparent'><a class='index' id='type,incomplete'></a></span>A program is ill-formed if the definition of any object gives the object
 an incomplete type (<a href='basic.types'>[basic.types]</a>).</p><p ><span class='indexparent'><a class='index' id='object,definition'></a></span><span class='indexparent'><a class='index' id='function,definition'></a></span><span class='indexparent'><a class='index' id='class,definition'></a></span><span class='indexparent'><a class='index' id='enumerator,definition'></a></span><span class='indexparent'><a class='index' id='one-definition_rule'></a></span></p></div><div class='footnote' id='footnote-25'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-25'>25)</a></div><p >Appearing inside the braced-enclosed
-<span class='grammarterm'>declaration-seq</span> in a <span class='grammarterm'>linkage-specification</span> does
+<i ><a href='dcl.dcl#nt:declaration-seq'>declaration-seq</a></i> in a <i ><a href='dcl.link#nt:linkage-specification'>linkage-specification</a></i> does
 not affect whether a declaration is a definition.</p></div></div><div id='def.odr'><h2 ><a class='secnum' href='#def.odr' style='min-width:88pt'>3.2</a> One-definition rule <a class='abbr_ref' href='basic.def.odr'>[basic.def.odr]</a></h2><div class='para' id='def.odr-1'><div class='marginalizedparent'><a class='marginalized' href='#def.odr-1'>1</a></div><p >No translation unit shall contain more than one definition of any
 variable, function, class type, enumeration type, or template.</p></div><div class='para' id='def.odr-2'><div class='marginalizedparent'><a class='marginalized' href='#def.odr-2'>2</a></div><p >An expression is <a id='potentially_evaluated'><i>potentially evaluated</i></a> unless it is an
 unevaluated operand (Clause <a href='expr'>[expr]</a>) or a subexpression thereof.
@@ -553,7 +553,7 @@ namespace N {
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='scope.namespace-2'><div class='marginalizedparent'><a class='marginalized' href='#scope.namespace-2'>2</a></div><p >A namespace member can also be referred to after the <span class='texttt'>::</span> scope
 resolution operator (<a href='expr.prim'>[expr.prim]</a>) applied to the name of its
 namespace or the name of a namespace which nominates the member's
-namespace in a <span class='grammarterm'>using-directive;</span> see <a href='namespace.qual'>[namespace.qual]</a>.</p></div><div class='para' id='scope.namespace-3'><div class='marginalizedparent'><a class='marginalized' href='#scope.namespace-3'>3</a></div><p ><span class='indexparent'><a class='index' id='scope,global_namespace'></a></span><span class='indexparent'><a class='index' id='scope,global'></a></span>The outermost declarative region of a translation unit is also a
+namespace in a <i ><a href='namespace.udir#nt:using-directive'>using-directive</a></i>; see <a href='namespace.qual'>[namespace.qual]</a>.</p></div><div class='para' id='scope.namespace-3'><div class='marginalizedparent'><a class='marginalized' href='#scope.namespace-3'>3</a></div><p ><span class='indexparent'><a class='index' id='scope,global_namespace'></a></span><span class='indexparent'><a class='index' id='scope,global'></a></span>The outermost declarative region of a translation unit is also a
 namespace, called the <a id='global_namespace'><i>global namespace</i></a>. A name declared in
 the global namespace has <a id='global_namespace_scope'><i>global namespace scope</i></a> (also called
 <a id='global_scope'><i>global scope</i></a>). The potential scope of such a name begins at
@@ -680,7 +680,7 @@ class (Clause <a href='class.derived'>[class.derived]</a>) hides the declaration
 a base class of the same name; see <a href='class.member.lookup'>[class.member.lookup]</a>.</p></div><div class='para' id='scope.hiding-4'><div class='marginalizedparent'><a class='marginalized' href='#scope.hiding-4'>4</a></div><p >During the lookup of a name qualified by a namespace name, declarations
 that would otherwise be made visible by a <i ><a href='namespace.udir#nt:using-directive'>using-directive</a></i> can
 be hidden by declarations with the same name in the namespace containing
-the <span class='grammarterm'>using-directive;</span> see (<a href='namespace.qual'>[namespace.qual]</a>).</p></div><div class='para' id='scope.hiding-5'><div class='marginalizedparent'><a class='marginalized' href='#scope.hiding-5'>5</a></div><p ><span class='indexparent'><a class='index' id='visibility'></a></span>If a name is in scope and is not hidden it is said to be <a id='visible'><i>visible</i></a>.<span class='indexparent'><a class='index' id='scope'></a></span></p></div></div></div><div id='lookup'><h2 ><a class='secnum' href='#lookup' style='min-width:88pt'>3.4</a> Name lookup <a class='abbr_ref' href='basic.lookup'>[basic.lookup]</a></h2><p ><span class='indexparent'><a class='index' id='scope,name_lookup_and'></a></span><span class='indexparent'><a class='index' id='lookup,name'></a></span>
+the <i ><a href='namespace.udir#nt:using-directive'>using-directive</a></i>; see <a href='namespace.qual'>[namespace.qual]</a>.</p></div><div class='para' id='scope.hiding-5'><div class='marginalizedparent'><a class='marginalized' href='#scope.hiding-5'>5</a></div><p ><span class='indexparent'><a class='index' id='visibility'></a></span>If a name is in scope and is not hidden it is said to be <a id='visible'><i>visible</i></a>.<span class='indexparent'><a class='index' id='scope'></a></span></p></div></div></div><div id='lookup'><h2 ><a class='secnum' href='#lookup' style='min-width:88pt'>3.4</a> Name lookup <a class='abbr_ref' href='basic.lookup'>[basic.lookup]</a></h2><p ><span class='indexparent'><a class='index' id='scope,name_lookup_and'></a></span><span class='indexparent'><a class='index' id='lookup,name'></a></span>
 </p><div class='para' id='lookup-1'><div class='marginalizedparent'><a class='marginalized' href='#lookup-1'>1</a></div><p >The name lookup rules apply uniformly to all names (including
 <i ><a href='dcl.typedef#nt:typedef-name'>typedef-names</a></i> (<a href='dcl.typedef'>[dcl.typedef]</a>),
 <i ><a href='namespace.def#nt:namespace-name'>namespace-names</a></i> (<a href='basic.namespace'>[basic.namespace]</a>), and
@@ -924,17 +924,17 @@ function parameter names are found. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></d
 described in <a href='temp.res'>[temp.res]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-28'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-28'>28)</a></div><p >This refers to unqualified names
 that occur, for instance, in
 a type or default argument in the
-<span class='grammarterm'>parameter-declaration-clause</span> or used in the function body.</p></div><div class='footnote' id='footnote-29'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-29'>29)</a></div><p >This refers to unqualified names
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i> or used in the function body.</p></div><div class='footnote' id='footnote-29'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-29'>29)</a></div><p >This refers to unqualified names
 following the class name; such a name may be used in the
-<span class='grammarterm'>base-clause</span> or may be used in the class definition.</p></div><div class='footnote' id='footnote-30'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-30'>30)</a></div><p >This lookup applies whether the
+<i ><a href='class.derived#nt:base-clause'>base-clause</a></i> or may be used in the class definition.</p></div><div class='footnote' id='footnote-30'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-30'>30)</a></div><p >This lookup applies whether the
 definition of <span class='texttt'>X</span> is
 nested within <span class='texttt'>Y</span>'s definition or whether <span class='texttt'>X</span>'s definition
 appears in a namespace scope enclosing <span class='texttt'>Y</span> 's
 definition (<a href='class.nest'>[class.nest]</a>).</p></div><div class='footnote' id='footnote-31'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-31'>31)</a></div><p >That is, an unqualified name that occurs,
 for instance, in a
 type in the
-<span class='grammarterm'>parameter-declaration-clause</span> or in the
-<span class='grammarterm'>exception-specification</span>.</p></div><div class='footnote' id='footnote-32'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-32'>32)</a></div><p >This lookup applies whether
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i> or in the
+<i ><a href='except.spec#nt:exception-specification'>exception-specification</a></i>.</p></div><div class='footnote' id='footnote-32'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-32'>32)</a></div><p >This lookup applies whether
 the member function is defined
 within the definition of class <span class='texttt'>X</span> or whether the member function
 is defined in a namespace scope enclosing <span class='texttt'>X</span>'s definition.</p></div></div><div id='lookup.argdep'><h3 ><a class='secnum' href='#lookup.argdep' style='min-width:103pt'>3.4.2</a> Argument-dependent name lookup <a class='abbr_ref' href='basic.lookup.argdep'>[basic.lookup.argdep]</a></h3><p ><span class='indexparent'><a class='index' id='lookup,argument-dependent'></a></span></p><div class='para' id='lookup.argdep-1'><div class='marginalizedparent'><a class='marginalized' href='#lookup.argdep-1'>1</a></div><p >When the <i ><a href='expr.post#nt:postfix-expression'>postfix-expression</a></i> in
@@ -1145,8 +1145,8 @@ B::A ba;            <span class='comment'>// object of type <span class='texttt'
 by the name of a derived class member can still be found if qualified by
 the name of its class followed by the <span class='texttt'>::</span> operator.</p></div><div class='footnote' id='footnote-33'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-33'>33)</a></div><p >Lookups in which
 function names are ignored include names appearing in a
-<span class='grammarterm'>nested-name-specifier</span>, an
-<span class='grammarterm'>elaborated-type-specifier</span>, or a <span class='grammarterm'>base-specifier</span>.</p></div></div><div id='namespace.qual'><h4 ><a class='secnum' href='#namespace.qual' style='min-width:118pt'>3.4.3.2</a> Namespace members <a class='abbr_ref' href='namespace.qual'>[namespace.qual]</a></h4><div class='para' id='namespace.qual-1'><div class='marginalizedparent'><a class='marginalized' href='#namespace.qual-1'>1</a></div><p ><span class='indexparent'><a class='index' id='lookup,namespace_member'></a></span>If the <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> of a <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i>
+<i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i>, an
+<i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i>, or a <i ><a href='class.derived#nt:base-specifier'>base-specifier</a></i>.</p></div></div><div id='namespace.qual'><h4 ><a class='secnum' href='#namespace.qual' style='min-width:118pt'>3.4.3.2</a> Namespace members <a class='abbr_ref' href='namespace.qual'>[namespace.qual]</a></h4><div class='para' id='namespace.qual-1'><div class='marginalizedparent'><a class='marginalized' href='#namespace.qual-1'>1</a></div><p ><span class='indexparent'><a class='index' id='lookup,namespace_member'></a></span>If the <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> of a <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i>
 nominates a namespace (including the case where the
 <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> is <span class='texttt'>::</span>, i.e., nominating
 the global namespace), the name specified after the
@@ -2492,7 +2492,7 @@ same value representation, they are nevertheless different types.
 to contain any value in the range
 <span class='texttt'>[INT_MIN, <span class='discretionary'></span>INT_MAX]</span>,
 as defined in the header <span class='texttt'>&lt;climits&gt;</span>.</p></div><div class='footnote' id='footnote-47'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-47'>47)</a></div><p >See <a href='dcl.type.simple'>[dcl.type.simple]</a> regarding the correspondence between types and
-the sequences of <span class='grammarterm'>type-specifiers</span> that designate them.</p></div><div class='footnote' id='footnote-48'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-48'>48)</a></div><p >This implies that
+the sequences of <i ><a href='dcl.type#nt:type-specifier'>type-specifiers</a></i> that designate them.</p></div><div class='footnote' id='footnote-48'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-48'>48)</a></div><p >This implies that
 unsigned arithmetic does not overflow because a result
 that cannot be represented by the resulting unsigned integer type is
 reduced modulo the number that is one greater than the largest value
