--- a/basic.lookup.html
+++ b/basic.lookup.html
@@ -242,17 +242,17 @@ function parameter names are found. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></d
 described in <a href='temp.res'>[temp.res]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-28'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-28'>28)</a></div><p >This refers to unqualified names
 that occur, for instance, in
 a type or default argument in the
-<span class='grammarterm'>parameter-declaration-clause</span> or used in the function body.</p></div><div class='footnote' id='footnote-29'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-29'>29)</a></div><p >This refers to unqualified names
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i> or used in the function body.</p></div><div class='footnote' id='footnote-29'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-29'>29)</a></div><p >This refers to unqualified names
 following the class name; such a name may be used in the
-<span class='grammarterm'>base-clause</span> or may be used in the class definition.</p></div><div class='footnote' id='footnote-30'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-30'>30)</a></div><p >This lookup applies whether the
+<i ><a href='class.derived#nt:base-clause'>base-clause</a></i> or may be used in the class definition.</p></div><div class='footnote' id='footnote-30'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-30'>30)</a></div><p >This lookup applies whether the
 definition of <span class='texttt'>X</span> is
 nested within <span class='texttt'>Y</span>'s definition or whether <span class='texttt'>X</span>'s definition
 appears in a namespace scope enclosing <span class='texttt'>Y</span> 's
 definition (<a href='class.nest'>[class.nest]</a>).</p></div><div class='footnote' id='footnote-31'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-31'>31)</a></div><p >That is, an unqualified name that occurs,
 for instance, in a
 type in the
-<span class='grammarterm'>parameter-declaration-clause</span> or in the
-<span class='grammarterm'>exception-specification</span>.</p></div><div class='footnote' id='footnote-32'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-32'>32)</a></div><p >This lookup applies whether
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i> or in the
+<i ><a href='except.spec#nt:exception-specification'>exception-specification</a></i>.</p></div><div class='footnote' id='footnote-32'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-32'>32)</a></div><p >This lookup applies whether
 the member function is defined
 within the definition of class <span class='texttt'>X</span> or whether the member function
 is defined in a namespace scope enclosing <span class='texttt'>X</span>'s definition.</p></div></div><div id='argdep'><h3 ><a class='secnum' href='#argdep' style='min-width:103pt'>3.4.2</a> Argument-dependent name lookup <a class='abbr_ref' href='basic.lookup.argdep'>[basic.lookup.argdep]</a></h3><p ><span class='indexparent'><a class='index' id='lookup,argument-dependent'></a></span></p><div class='para' id='argdep-1'><div class='marginalizedparent'><a class='marginalized' href='#argdep-1'>1</a></div><p >When the <i ><a href='expr.post#nt:postfix-expression'>postfix-expression</a></i> in
@@ -463,8 +463,8 @@ B::A ba;            <span class='comment'>// object of type <span class='texttt'
 by the name of a derived class member can still be found if qualified by
 the name of its class followed by the <span class='texttt'>::</span> operator.</p></div><div class='footnote' id='footnote-33'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-33'>33)</a></div><p >Lookups in which
 function names are ignored include names appearing in a
-<span class='grammarterm'>nested-name-specifier</span>, an
-<span class='grammarterm'>elaborated-type-specifier</span>, or a <span class='grammarterm'>base-specifier</span>.</p></div></div><div id='namespace.qual'><h4 ><a class='secnum' href='#namespace.qual' style='min-width:118pt'>3.4.3.2</a> Namespace members <a class='abbr_ref' href='namespace.qual'>[namespace.qual]</a></h4><div class='para' id='namespace.qual-1'><div class='marginalizedparent'><a class='marginalized' href='#namespace.qual-1'>1</a></div><p ><span class='indexparent'><a class='index' id='lookup,namespace_member'></a></span>If the <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> of a <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i>
+<i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i>, an
+<i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i>, or a <i ><a href='class.derived#nt:base-specifier'>base-specifier</a></i>.</p></div></div><div id='namespace.qual'><h4 ><a class='secnum' href='#namespace.qual' style='min-width:118pt'>3.4.3.2</a> Namespace members <a class='abbr_ref' href='namespace.qual'>[namespace.qual]</a></h4><div class='para' id='namespace.qual-1'><div class='marginalizedparent'><a class='marginalized' href='#namespace.qual-1'>1</a></div><p ><span class='indexparent'><a class='index' id='lookup,namespace_member'></a></span>If the <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> of a <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i>
 nominates a namespace (including the case where the
 <i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i> is <span class='texttt'>::</span>, i.e., nominating
 the global namespace), the name specified after the
