--- a/basic.namespace.html
+++ b/basic.namespace.html
@@ -762,4 +762,4 @@ name lookup in a class hierarchy, some ambiguities may be
 resolved by considering whether one member hides the other along some
 paths (<a href='class.member.lookup'>[class.member.lookup]</a>). There is no such disambiguation when
 considering the set of names found as a result of following
-<span class='grammarterm'>using-directives</span>.</p></div></div></div></div></body></html>
+<i ><a href='namespace.udir#nt:using-directive'>using-directives</a></i>.</p></div></div></div></div></body></html>
