--- a/class.conv.html
+++ b/class.conv.html
@@ -106,7 +106,7 @@ Such functions are called <a id='conversion_function'><i>conversion function</i>
 A <i ><a href='dcl.spec#nt:decl-specifier'>decl-specifier</a></i> in the <i ><a href='dcl.spec#nt:decl-specifier-seq'>decl-specifier-seq</a></i>
 of a conversion function (if any) shall be neither
 a <i ><a href='dcl.type#nt:defining-type-specifier'>defining-type-specifier</a></i> nor <span class='texttt'>static</span>.
-<span class='indexparent'><a class='index' id='conversion,type_of'></a></span>Type of the conversion function (<a href='dcl.fct'>[dcl.fct]</a>) is
+<span class='indexparent'><a class='index' id='conversion,type_of'></a></span>The type of the conversion function (<a href='dcl.fct'>[dcl.fct]</a>) is
 “function taking no parameter returning
 <i ><a href='class.conv.fct#nt:conversion-type-id'>conversion-type-id</a></i>”.
 A conversion function is never used to convert a (possibly cv-qualified) object
