--- a/class.html
+++ b/class.html
@@ -668,7 +668,7 @@ and <span class='texttt'>s::g()</span> is a non-<span class='texttt'>const</span
 not be declared <span class='texttt'>const</span>, <span class='texttt'>volatile</span> or <span class='texttt'>const</span>
 <span class='texttt'>volatile</span>. [&nbsp;<i>Note:</i><span class='space'></span> However, these functions can be invoked to
 create and destroy objects with cv-qualified types,
-see (<a href='class.ctor'>[class.ctor]</a>) and (<a href='class.dtor'>[class.dtor]</a>).
+see <a href='class.ctor'>[class.ctor]</a> and <a href='class.dtor'>[class.dtor]</a>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div><div id='static'><h3 ><a class='secnum' href='#static' style='min-width:103pt'>9.2.3</a> Static members <a class='abbr_ref' href='class.static'>[class.static]</a></h3><p ><span class='indexparent'><a class='index' id='member,static'></a></span>
 </p><div class='para' id='static-1'><div class='marginalizedparent'><a class='marginalized' href='#static-1'>1</a></div><p >A static member <span class='texttt'>s</span> of class <span class='texttt'>X</span> may be referred to
 using the <i ><a href='expr.prim.id.qual#nt:qualified-id'>qualified-id</a></i> expression <span class='texttt'>X::s</span>; it is not
