--- a/class.qual.html
+++ b/class.qual.html
@@ -42,5 +42,5 @@ B::A ba;            <span class='comment'>// object of type <span class='texttt'
 by the name of a derived class member can still be found if qualified by
 the name of its class followed by the <span class='texttt'>::</span> operator.</p></div><div class='footnote' id='footnote-33'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-33'>33)</a></div><p >Lookups in which
 function names are ignored include names appearing in a
-<span class='grammarterm'>nested-name-specifier</span>, an
-<span class='grammarterm'>elaborated-type-specifier</span>, or a <span class='grammarterm'>base-specifier</span>.</p></div></div></div></body></html>
+<i ><a href='expr.prim.id.qual#nt:nested-name-specifier'>nested-name-specifier</a></i>, an
+<i ><a href='dcl.type.elab#nt:elaborated-type-specifier'>elaborated-type-specifier</a></i>, or a <i ><a href='class.derived#nt:base-specifier'>base-specifier</a></i>.</p></div></div></div></body></html>
