--- a/class.this.html
+++ b/class.this.html
@@ -45,5 +45,5 @@ and <span class='texttt'>s::g()</span> is a non-<span class='texttt'>const</span
 not be declared <span class='texttt'>const</span>, <span class='texttt'>volatile</span> or <span class='texttt'>const</span>
 <span class='texttt'>volatile</span>. [&nbsp;<i>Note:</i><span class='space'></span> However, these functions can be invoked to
 create and destroy objects with cv-qualified types,
-see (<a href='class.ctor'>[class.ctor]</a>) and (<a href='class.dtor'>[class.dtor]</a>).
+see <a href='class.ctor'>[class.ctor]</a> and <a href='class.dtor'>[class.dtor]</a>.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div></body></html>
