--- a/expr.new.html
+++ b/expr.new.html
@@ -200,7 +200,7 @@ be no greater than the sum of the sizes for the omitted calls as specified
 above, plus the size for the extended call had it not been extended, plus any
 padding necessary to align the allocated objects within the allocated memory.</p></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><p ><span class='indexparent'><a class='index' id='placement_syntax,new'></a></span><span class='indexparent'><a class='index' id='new-expression,placement'></a></span>The <i ><a href='expr.new#nt:new-placement'>new-placement</a></i> syntax is used to supply additional
 arguments to an allocation function; such an expression is called
-a <span class='defnx'>placement <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>placement new-expression@placement <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>.</span></p></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><p >Overload resolution is
+a <a id='placement_new-expression'><i>placement <i ><a href='expr.new#nt:new-expression'>new-expression</a></i></i></a>.</p></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><p >Overload resolution is
 performed on a function call created by assembling an argument list.
 The first argument is
 the amount of space requested,
@@ -334,5 +334,5 @@ If the copy is elided in one place, it need not be elided in the other.</p></div
 returns a signed integer type, the second standard conversion converts to the
 unsigned type <span class='texttt'>std::size_t</span> and thus thwarts any attempt to detect a
 negative value afterwards.</p></div><div class='footnote' id='footnote-79'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-79'>79)</a></div><p >This may
-include evaluating a <span class='grammarterm'>new-initializer</span> and/or calling
+include evaluating a <i ><a href='expr.new#nt:new-initializer'>new-initializer</a></i> and/or calling
 a constructor.</p></div></div></div></body></html>
