--- a/expr.ref.html
+++ b/expr.ref.html
@@ -82,5 +82,5 @@ of the object expression; see <a href='class.access.base'>[class.access.base]</a
 access expression is evaluated, the subexpression evaluation happens even if the
 result is unnecessary to determine
 the value of the entire postfix expression, for example if the
-<span class='grammarterm'>id-expression</span> denotes a static member.</p></div><div class='footnote' id='footnote-67'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-67'>67)</a></div><p >Note that
+<i ><a href='expr.prim.id#nt:id-expression'>id-expression</a></i> denotes a static member.</p></div><div class='footnote' id='footnote-67'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-67'>67)</a></div><p >Note that
 <span class='texttt'>(*(E1))</span> is an lvalue.</p></div></div></div></body></html>
