--- a/expr.unary.html
+++ b/expr.unary.html
@@ -373,7 +373,7 @@ be no greater than the sum of the sizes for the omitted calls as specified
 above, plus the size for the extended call had it not been extended, plus any
 padding necessary to align the allocated objects within the allocated memory.</p></div><div class='para' id='expr.new-13'><div class='marginalizedparent'><a class='marginalized' href='#expr.new-13'>13</a></div><p ><span class='indexparent'><a class='index' id='placement_syntax,new'></a></span><span class='indexparent'><a class='index' id='new-expression,placement'></a></span>The <i ><a href='expr.new#nt:new-placement'>new-placement</a></i> syntax is used to supply additional
 arguments to an allocation function; such an expression is called
-a <span class='defnx'>placement <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>placement new-expression@placement <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>.</span></p></div><div class='para' id='expr.new-14'><div class='marginalizedparent'><a class='marginalized' href='#expr.new-14'>14</a></div><p >Overload resolution is
+a <a id='placement_new-expression'><i>placement <i ><a href='expr.new#nt:new-expression'>new-expression</a></i></i></a>.</p></div><div class='para' id='expr.new-14'><div class='marginalizedparent'><a class='marginalized' href='#expr.new-14'>14</a></div><p >Overload resolution is
 performed on a function call created by assembling an argument list.
 The first argument is
 the amount of space requested,
@@ -507,7 +507,7 @@ If the copy is elided in one place, it need not be elided in the other.</p></div
 returns a signed integer type, the second standard conversion converts to the
 unsigned type <span class='texttt'>std::size_t</span> and thus thwarts any attempt to detect a
 negative value afterwards.</p></div><div class='footnote' id='footnote-79'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-79'>79)</a></div><p >This may
-include evaluating a <span class='grammarterm'>new-initializer</span> and/or calling
+include evaluating a <i ><a href='expr.new#nt:new-initializer'>new-initializer</a></i> and/or calling
 a constructor.</p></div></div><div id='expr.delete'><h3 ><a class='secnum' href='#expr.delete' style='min-width:103pt'>5.3.5</a> Delete <a class='abbr_ref' href='expr.delete'>[expr.delete]</a></h3><div class='para' id='expr.delete-1'><div class='marginalizedparent'><a class='marginalized' href='#expr.delete-1'>1</a></div><p ><span class='indexparent'><a class='index' id='expression,delete'></a></span><span class='indexparent'><a class='index' id='delete'></a></span>The <i ><a href='expr.delete#nt:delete-expression'>delete-expression</a></i> operator destroys a most derived
 object (<a href='intro.object'>[intro.object]</a>) or array created by a
 <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>.</p><pre class='bnf'><a id='nt:delete-expression'>delete-expression:</a>
@@ -627,13 +627,13 @@ is used,
 the size of the block
 is passed as the corresponding argument.<a class='footnotenum' href='#footnote-83'>83</a></p></div><div class='para' id='expr.delete-12'><div class='marginalizedparent'><a class='marginalized' href='#expr.delete-12'>12</a></div><p >Access and ambiguity control are done for both the deallocation function
 and the destructor (<a href='class.dtor'>[class.dtor]</a>, <a href='class.free'>[class.free]</a>).</p></div><div class='footnote' id='footnote-80'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-80'>80)</a></div><p >A lambda expression with a
-<span class='grammarterm'>lambda-introducer</span> that consists of
+<i ><a href='expr.prim.lambda#nt:lambda-introducer'>lambda-introducer</a></i> that consists of
 empty square brackets can follow the <span class='texttt'>delete</span> keyword if the lambda expression is
 enclosed in parentheses.</p></div><div class='footnote' id='footnote-81'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-81'>81)</a></div><p >This implies that an object
 cannot be deleted using a pointer of type
 <span class='texttt'>void*</span> because <span class='texttt'>void</span> is not an object type.</p></div><div class='footnote' id='footnote-82'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-82'>82)</a></div><p >For non-zero-length
 arrays, this is the same as a pointer to the first
-element of the array created by that <span class='grammarterm'>new-expression</span>.
+element of the array created by that <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>.
 Zero-length arrays do not have a first element.</p></div><div class='footnote' id='footnote-83'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-83'>83)</a></div><p >If the static type of the object to be deleted is complete
 and is different from the dynamic type, and the destructor is not virtual, the size might
 be incorrect, but that case is already undefined, as stated above.</p></div></div><div id='expr.alignof'><h3 ><a class='secnum' href='#expr.alignof' style='min-width:103pt'>5.3.6</a> Alignof <a class='abbr_ref' href='expr.alignof'>[expr.alignof]</a></h3><div class='para' id='expr.alignof-1'><div class='marginalizedparent'><a class='marginalized' href='#expr.alignof-1'>1</a></div><p ><span class='indexparent'><a class='index' id='expression,alignof'></a></span>An <span class='texttt'>alignof</span> expression yields the alignment requirement
