--- a/lex.charset.html
+++ b/lex.charset.html
@@ -47,6 +47,6 @@ character set. However, because the mapping from source file characters to the s
 character set (described in translation phase 1) is specified as
 <span class='indexparent'><a class='index' id='mapping_from_physical_source_file_characters_to_basic_source_character_set'></a></span>implementation-defined,
 an implementation is required to document how the basic source characters are
-represented in source files.</p></div><div class='footnote' id='footnote-15'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-15'>15)</a></div><p >A sequence of characters resembling a <span class='grammarterm'>universal-character-name</span> in an
-<span class='grammarterm'>r-char-sequence</span> (<a href='lex.string'>[lex.string]</a>) does not form a
-<span class='grammarterm'>universal-character-name</span>.</p></div></div></div></body></html>
+represented in source files.</p></div><div class='footnote' id='footnote-15'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-15'>15)</a></div><p >A sequence of characters resembling a <i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i> in an
+<i ><a href='lex.string#nt:r-char-sequence'>r-char-sequence</a></i> (<a href='lex.string'>[lex.string]</a>) does not form a
+<i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i>.</p></div></div></div></body></html>
