--- a/lex.html
+++ b/lex.html
@@ -113,7 +113,7 @@ needed for execution in its execution environment.<span class='indexparent'><a c
 occur, although in practice different phases might be folded together.</p></div><div class='footnote' id='footnote-12'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-12'>12)</a></div><p >A partial preprocessing
 token would arise from a source file
 ending in the first portion of a multi-character token that requires a
-terminating sequence of characters, such as a <span class='grammarterm'>header-name</span>
+terminating sequence of characters, such as a <i ><a href='lex.header#nt:header-name'>header-name</a></i>
 that is missing the closing <span class='texttt'>"</span>
 or <span class='texttt'>&gt;</span>. A partial comment
 would arise from a source file ending with an unclosed <span class='texttt'>/*</span>
@@ -167,9 +167,9 @@ character set. However, because the mapping from source file characters to the s
 character set (described in translation phase 1) is specified as
 <span class='indexparent'><a class='index' id='mapping_from_physical_source_file_characters_to_basic_source_character_set'></a></span>implementation-defined,
 an implementation is required to document how the basic source characters are
-represented in source files.</p></div><div class='footnote' id='footnote-15'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-15'>15)</a></div><p >A sequence of characters resembling a <span class='grammarterm'>universal-character-name</span> in an
-<span class='grammarterm'>r-char-sequence</span> (<a href='lex.string'>[lex.string]</a>) does not form a
-<span class='grammarterm'>universal-character-name</span>.</p></div></div><div id='pptoken'><h2 ><a class='secnum' href='#pptoken' style='min-width:88pt'>2.4</a> Preprocessing tokens <a class='abbr_ref' href='lex.pptoken'>[lex.pptoken]</a></h2><p ><span class='indexparent'><a class='index' id='token,preprocessing'></a></span></p><pre class='bnf'><a id='nt:preprocessing-token'>preprocessing-token:</a>
+represented in source files.</p></div><div class='footnote' id='footnote-15'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-15'>15)</a></div><p >A sequence of characters resembling a <i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i> in an
+<i ><a href='lex.string#nt:r-char-sequence'>r-char-sequence</a></i> (<a href='lex.string'>[lex.string]</a>) does not form a
+<i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i>.</p></div></div><div id='pptoken'><h2 ><a class='secnum' href='#pptoken' style='min-width:88pt'>2.4</a> Preprocessing tokens <a class='abbr_ref' href='lex.pptoken'>[lex.pptoken]</a></h2><p ><span class='indexparent'><a class='index' id='token,preprocessing'></a></span></p><pre class='bnf'><a id='nt:preprocessing-token'>preprocessing-token:</a>
     <i ><a href='lex.header#nt:header-name'>header-name</a></i>
     <i ><a href='lex.name#nt:identifier'>identifier</a></i>
     <i ><a href='lex.ppnumber#nt:pp-number'>pp-number</a></i>
@@ -357,10 +357,10 @@ an uppercase letter
 </p></li><li ><p >Each identifier that begins with an underscore is
 <span class='indexparent'><a class='index' id='character,underscore'></a></span>reserved to the implementation for use as a name in the global namespace.<span class='indexparent'><a class='index' id='namespace,global'></a></span>
 </p></li></ul></div><div class='footnote' id='footnote-20'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-20'>20)</a></div><p >On systems in which linkers cannot accept extended
-characters, an encoding of the <span class='grammarterm'>universal-character-name</span> may be used in
+characters, an encoding of the <i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i> may be used in
 forming valid external identifiers. For example, some otherwise unused
 character or sequence of characters may be used to encode the
-<span class='texttt'>\u</span> in a <span class='grammarterm'>universal-character-name</span>. Extended
+<span class='texttt'>\u</span> in a <i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i>. Extended
 characters may produce a long external identifier, but C++ does not
 place a translation limit on significant characters for external
 identifiers. In C++, upper- and lower-case letters are considered
