--- a/lex.phases.html
+++ b/lex.phases.html
@@ -82,7 +82,7 @@ needed for execution in its execution environment.<span class='indexparent'><a c
 occur, although in practice different phases might be folded together.</p></div><div class='footnote' id='footnote-12'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-12'>12)</a></div><p >A partial preprocessing
 token would arise from a source file
 ending in the first portion of a multi-character token that requires a
-terminating sequence of characters, such as a <span class='grammarterm'>header-name</span>
+terminating sequence of characters, such as a <i ><a href='lex.header#nt:header-name'>header-name</a></i>
 that is missing the closing <span class='texttt'>"</span>
 or <span class='texttt'>&gt;</span>. A partial comment
 would arise from a source file ending with an unclosed <span class='texttt'>/*</span>
