--- a/res.on.exception.handling.html
+++ b/res.on.exception.handling.html
@@ -38,8 +38,8 @@ Library implementations should
 report errors by throwing exceptions of or derived
 from the standard exception classes (<a href='bad.alloc'>[bad.alloc]</a>,
 <a href='support.exception'>[support.exception]</a>, <a href='std.exceptions'>[std.exceptions]</a>).</p></div><div class='footnote' id='footnote-189'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-189'>189)</a></div><p >That is, an implementation may provide an explicit
-<span class='grammarterm'>exception-specification</span>
+<i ><a href='except.spec#nt:exception-specification'>exception-specification</a></i>
 that defines the subset of “any” exceptions thrown by that function.
 This implies that the implementation may list implementation-defined types
 in such an
-<span class='indexparent'><a class='index' id='types,implementation-defined_exception'></a></span><span class='indexparent'><a class='index' id='specifications,implementation-defined_exception'></a></span><span class='grammarterm'>exception-specification</span>.</p></div></div></div></body></html>
+<span class='indexparent'><a class='index' id='types,implementation-defined_exception'></a></span><span class='indexparent'><a class='index' id='specifications,implementation-defined_exception'></a></span><i ><a href='except.spec#nt:exception-specification'>exception-specification</a></i>.</p></div></div></div></body></html>
