--- a/stmt.select.html
+++ b/stmt.select.html
@@ -12,7 +12,7 @@ in the syntax notation.
 in the <span class='texttt'>else</span> form of the <span class='texttt'>if</span> statement) implicitly defines
 a block scope (<a href='basic.scope'>[basic.scope]</a>). If the substatement in a
 selection-statement is a single statement and not a
-<span class='grammarterm'>compound-statement,</span> it is as if it was rewritten to be a
+<i ><a href='stmt.block#nt:compound-statement'>compound-statement</a></i>, it is as if it was rewritten to be a
 compound-statement containing the original substatement.
 [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
 if (x)
