--- a/temp.arg.html
+++ b/temp.arg.html
@@ -144,11 +144,11 @@ S&lt;bool&gt;* p; <span class='comment'>// the type of <span class='texttt'>p</s
 </span></pre><p >The default argument for <span class='texttt'>U</span> is instantiated to form the type <span class='texttt'>S&lt;bool, int&gt;*</span>.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><p >A <i ><a href='temp.names#nt:template-argument'>template-argument</a></i> followed by an ellipsis is
 a pack expansion (<a href='temp.variadic'>[temp.variadic]</a>).</p></div><div class='footnote' id='footnote-137'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-137'>137)</a></div><p >There is no such ambiguity in a default
-<span class='grammarterm'>template-argument</span>
+<i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 because the form of the
-<span class='grammarterm'>template-parameter</span>
+<i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 determines the allowable forms of the
-<span class='grammarterm'>template-argument</span>.</p></div><div id='type'><h3 ><a class='secnum' href='#type' style='min-width:103pt'>14.3.1</a> Template type arguments <a class='abbr_ref' href='temp.arg.type'>[temp.arg.type]</a></h3><div class='para' id='type-1'><div class='marginalizedparent'><a class='marginalized' href='#type-1'>1</a></div><p >A
+<i ><a href='temp.names#nt:template-argument'>template-argument</a></i>.</p></div><div id='type'><h3 ><a class='secnum' href='#type' style='min-width:103pt'>14.3.1</a> Template type arguments <a class='abbr_ref' href='temp.arg.type'>[temp.arg.type]</a></h3><div class='para' id='type-1'><div class='marginalizedparent'><a class='marginalized' href='#type-1'>1</a></div><p >A
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 for a
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
