--- a/temp.deduct.type.html
+++ b/temp.deduct.type.html
@@ -481,9 +481,9 @@ X&lt;int&gt; x1;                      <span class='comment'>// uses primary temp
 </span>Y&lt;int, float, double&gt; y3;       <span class='comment'>// uses primary template; <span class='texttt'>Types</span> contains <span class='texttt'>int</span>, <span class='texttt'>float</span>, <span class='texttt'>double</span>
 </span>int fv = f(g);                  <span class='comment'>// OK; <span class='texttt'>Types</span> contains <span class='texttt'>int</span>, <span class='texttt'>float</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-142'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-142'>142)</a></div><p >Although the
-<span class='grammarterm'>template-argument</span>
+<i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 corresponding to a
-<span class='grammarterm'>template-parameter</span>
+<i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 of type
 <span class='texttt'>bool</span>
 may be deduced from an array bound, the resulting value will always be
