--- a/temp.html
+++ b/temp.html
@@ -362,9 +362,9 @@ template &lt;class... Types&gt; class Tuple;                <span class='comment
 template&lt;class... T, T... Values&gt; struct static_array;<span class='comment'>// error: <span class='texttt'>Values</span> expands template type parameter
 </span>                                                      <span class='comment'>// pack <span class='texttt'>T</span> within the same template parameter list
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-135'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-135'>135)</a></div><p >Since template
-<span class='grammarterm'>template-parameters</span>
+<i ><a href='temp.param#nt:template-parameter'>template-parameters</a></i>
 and template
-<span class='grammarterm'>template-arguments</span>
+<i ><a href='temp.names#nt:template-argument'>template-arguments</a></i>
 are treated as types for descriptive purposes, the terms
 <span class='grammarterm'>non-type parameter</span>
 and
@@ -503,10 +503,10 @@ D&lt;B&lt;int&gt; &gt; db;
 that names a class template specialization is a
 <i ><a href='class#nt:class-name'>class-name</a></i>
 (Clause <a href='class'>[class]</a>).</p></div><div class='para' id='names-7'><div class='marginalizedparent'><a class='marginalized' href='#names-7'>7</a></div><p >A <i ><a href='temp.names#nt:template-id'>template-id</a></i> that names an alias template
-specialization is a <i ><a href='dcl.type.simple#nt:type-name'>type-name</a></i>.</p></div><div class='footnote' id='footnote-136'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-136'>136)</a></div><p >A <span class='texttt'>&gt;</span> that encloses the <span class='grammarterm'>type-id</span>
+specialization is a <i ><a href='dcl.type.simple#nt:type-name'>type-name</a></i>.</p></div><div class='footnote' id='footnote-136'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-136'>136)</a></div><p >A <span class='texttt'>&gt;</span> that encloses the <i ><a href='dcl.name#nt:type-id'>type-id</a></i>
 of a <span class='texttt'>dynamic_cast</span>, <span class='texttt'>static_cast</span>, <span class='texttt'>reinterpret_cast</span>
-or <span class='texttt'>const_cast</span>, or which encloses the <span class='grammarterm'>template-arguments</span>
-of a subsequent <span class='grammarterm'>template-id</span>, is considered nested for the purpose
+or <span class='texttt'>const_cast</span>, or which encloses the <i ><a href='temp.names#nt:template-argument'>template-arguments</a></i>
+of a subsequent <i ><a href='temp.names#nt:template-id'>template-id</a></i>, is considered nested for the purpose
 of this description.
 </p></div></div><div id='arg'><h2 ><a class='secnum' href='#arg' style='min-width:88pt'>14.3</a> Template arguments <a class='abbr_ref' href='temp.arg'>[temp.arg]</a></h2><div class='para' id='arg-1'><div class='marginalizedparent'><a class='marginalized' href='#arg-1'>1</a></div><p ><span class='indexparent'><a class='index' id='argument,template'></a></span>There are three forms of
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>,
@@ -654,11 +654,11 @@ S&lt;bool&gt;* p; <span class='comment'>// the type of <span class='texttt'>p</s
 </span></pre><p >The default argument for <span class='texttt'>U</span> is instantiated to form the type <span class='texttt'>S&lt;bool, int&gt;*</span>.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='arg-9'><div class='marginalizedparent'><a class='marginalized' href='#arg-9'>9</a></div><p >A <i ><a href='temp.names#nt:template-argument'>template-argument</a></i> followed by an ellipsis is
 a pack expansion (<a href='temp.variadic'>[temp.variadic]</a>).</p></div><div class='footnote' id='footnote-137'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-137'>137)</a></div><p >There is no such ambiguity in a default
-<span class='grammarterm'>template-argument</span>
+<i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 because the form of the
-<span class='grammarterm'>template-parameter</span>
+<i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 determines the allowable forms of the
-<span class='grammarterm'>template-argument</span>.</p></div><div id='arg.type'><h3 ><a class='secnum' href='#arg.type' style='min-width:103pt'>14.3.1</a> Template type arguments <a class='abbr_ref' href='temp.arg.type'>[temp.arg.type]</a></h3><div class='para' id='arg.type-1'><div class='marginalizedparent'><a class='marginalized' href='#arg.type-1'>1</a></div><p >A
+<i ><a href='temp.names#nt:template-argument'>template-argument</a></i>.</p></div><div id='arg.type'><h3 ><a class='secnum' href='#arg.type' style='min-width:103pt'>14.3.1</a> Template type arguments <a class='abbr_ref' href='temp.arg.type'>[temp.arg.type]</a></h3><div class='para' id='arg.type-1'><div class='marginalizedparent'><a class='marginalized' href='#arg.type-1'>1</a></div><p >A
 <i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 for a
 <i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
@@ -5290,9 +5290,9 @@ X&lt;int&gt; x1;                      <span class='comment'>// uses primary temp
 </span>Y&lt;int, float, double&gt; y3;       <span class='comment'>// uses primary template; <span class='texttt'>Types</span> contains <span class='texttt'>int</span>, <span class='texttt'>float</span>, <span class='texttt'>double</span>
 </span>int fv = f(g);                  <span class='comment'>// OK; <span class='texttt'>Types</span> contains <span class='texttt'>int</span>, <span class='texttt'>float</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-142'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-142'>142)</a></div><p >Although the
-<span class='grammarterm'>template-argument</span>
+<i ><a href='temp.names#nt:template-argument'>template-argument</a></i>
 corresponding to a
-<span class='grammarterm'>template-parameter</span>
+<i ><a href='temp.param#nt:template-parameter'>template-parameter</a></i>
 of type
 <span class='texttt'>bool</span>
 may be deduced from an array bound, the resulting value will always be
