--- a/basic.fundamental.html
+++ b/basic.fundamental.html
@@ -129,7 +129,7 @@ same value representation, they are nevertheless different types.
 to contain any value in the range
 <span class='texttt'>[INT_MIN, <span class='discretionary'></span>INT_MAX]</span>,
 as defined in the header <span class='texttt'>&lt;climits&gt;</span>.</p></div><div class='footnote' id='footnote-47'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-47'>47)</a></div><p >See <a href='dcl.type.simple'>[dcl.type.simple]</a> regarding the correspondence between types and
-the sequences of <span class='grammarterm'>type-specifiers</span> that designate them.</p></div><div class='footnote' id='footnote-48'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-48'>48)</a></div><p >This implies that
+the sequences of <i ><a href='dcl.type#nt:type-specifier'>type-specifiers</a></i> that designate them.</p></div><div class='footnote' id='footnote-48'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-48'>48)</a></div><p >This implies that
 unsigned arithmetic does not overflow because a result
 that cannot be represented by the resulting unsigned integer type is
 reduced modulo the number that is one greater than the largest value
