--- a/basic.lookup.unqual.html
+++ b/basic.lookup.unqual.html
@@ -220,17 +220,17 @@ function parameter names are found. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></d
 described in <a href='temp.res'>[temp.res]</a>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-28'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-28'>28)</a></div><p >This refers to unqualified names
 that occur, for instance, in
 a type or default argument in the
-<span class='grammarterm'>parameter-declaration-clause</span> or used in the function body.</p></div><div class='footnote' id='footnote-29'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-29'>29)</a></div><p >This refers to unqualified names
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i> or used in the function body.</p></div><div class='footnote' id='footnote-29'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-29'>29)</a></div><p >This refers to unqualified names
 following the class name; such a name may be used in the
-<span class='grammarterm'>base-clause</span> or may be used in the class definition.</p></div><div class='footnote' id='footnote-30'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-30'>30)</a></div><p >This lookup applies whether the
+<i ><a href='class.derived#nt:base-clause'>base-clause</a></i> or may be used in the class definition.</p></div><div class='footnote' id='footnote-30'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-30'>30)</a></div><p >This lookup applies whether the
 definition of <span class='texttt'>X</span> is
 nested within <span class='texttt'>Y</span>'s definition or whether <span class='texttt'>X</span>'s definition
 appears in a namespace scope enclosing <span class='texttt'>Y</span> 's
 definition (<a href='class.nest'>[class.nest]</a>).</p></div><div class='footnote' id='footnote-31'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-31'>31)</a></div><p >That is, an unqualified name that occurs,
 for instance, in a
 type in the
-<span class='grammarterm'>parameter-declaration-clause</span> or in the
-<span class='grammarterm'>exception-specification</span>.</p></div><div class='footnote' id='footnote-32'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-32'>32)</a></div><p >This lookup applies whether
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i> or in the
+<i ><a href='except.spec#nt:exception-specification'>exception-specification</a></i>.</p></div><div class='footnote' id='footnote-32'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-32'>32)</a></div><p >This lookup applies whether
 the member function is defined
 within the definition of class <span class='texttt'>X</span> or whether the member function
 is defined in a namespace scope enclosing <span class='texttt'>X</span>'s definition.</p></div></div></div></body></html>
