--- a/basic.scope.namespace.html
+++ b/basic.scope.namespace.html
@@ -36,7 +36,7 @@ namespace N {
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >A namespace member can also be referred to after the <span class='texttt'>::</span> scope
 resolution operator (<a href='expr.prim'>[expr.prim]</a>) applied to the name of its
 namespace or the name of a namespace which nominates the member's
-namespace in a <span class='grammarterm'>using-directive;</span> see <a href='namespace.qual'>[namespace.qual]</a>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p ><span class='indexparent'><a class='index' id='scope,global_namespace'></a></span><span class='indexparent'><a class='index' id='scope,global'></a></span>The outermost declarative region of a translation unit is also a
+namespace in a <i ><a href='namespace.udir#nt:using-directive'>using-directive</a></i>; see <a href='namespace.qual'>[namespace.qual]</a>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p ><span class='indexparent'><a class='index' id='scope,global_namespace'></a></span><span class='indexparent'><a class='index' id='scope,global'></a></span>The outermost declarative region of a translation unit is also a
 namespace, called the <a id='global_namespace'><i>global namespace</i></a>. A name declared in
 the global namespace has <a id='global_namespace_scope'><i>global namespace scope</i></a> (also called
 <a id='global_scope'><i>global scope</i></a>). The potential scope of such a name begins at
