--- a/dcl.decl.html
+++ b/dcl.decl.html
@@ -56,13 +56,13 @@ to the corresponding sequence of declarations each with a single declarator.
 That is</p><p ><span class='texttt'>T  D1, D2, ... Dn;</span></p><p >is usually equivalent to</p><p ><span class='texttt'>T  D1; T D2; ... T Dn;</span></p><p >where
 <span class='texttt'>T</span>
 is a
-<span class='grammarterm'>decl-specifier-seq</span>
+<i ><a href='dcl.spec#nt:decl-specifier-seq'>decl-specifier-seq</a></i>
 and each
 <span class='texttt'>Di</span>
 is an
-<span class='grammarterm'>init-declarator</span>.
+<i ><a href='dcl.decl#nt:init-declarator'>init-declarator</a></i>.
 An exception occurs when a name introduced by one of the
-<span class='grammarterm'>declarators</span>
+<i ><a href='dcl.decl#nt:declarator'>declarators</a></i>
 hides a type name used by the
 <span class='grammarterm'>decl-specifiers</span>,
 so that when the same
@@ -1150,9 +1150,9 @@ a template parameter pack that has not been expanded or contains <span class='te
 otherwise, it is
 parsed as part of the <i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i>.<a class='footnotenum' href='#footnote-100'>100</a><span class='indexparent'><a class='index' id='declarator,function'></a></span></p></div><div class='footnote' id='footnote-99'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-99'>99)</a></div><p >As indicated by syntax, cv-qualifiers are a significant component in function return types.</p></div><div class='footnote' id='footnote-100'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-100'>100)</a></div><p >One can explicitly disambiguate the parse either by
 introducing a comma (so the ellipsis will be parsed as part of the
-<span class='grammarterm'>parameter-declaration-clause</span>) or by introducing a name for the
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i>) or by introducing a name for the
 parameter (so the ellipsis will be parsed as part of the
-<span class='grammarterm'>declarator-id</span>).</p></div></div><div id='dcl.fct.default'><h3 ><a class='secnum' href='#dcl.fct.default' style='min-width:103pt'>8.3.6</a> Default arguments <a class='abbr_ref' href='dcl.fct.default'>[dcl.fct.default]</a></h3><p ><span class='indexparent'><a class='index' id='declaration,default_argument'></a></span></p><div class='para' id='dcl.fct.default-1'><div class='marginalizedparent'><a class='marginalized' href='#dcl.fct.default-1'>1</a></div><p >If an <i ><a href='dcl.init#nt:initializer-clause'>initializer-clause</a></i> is specified in a
+<i ><a href='dcl.decl#nt:declarator-id'>declarator-id</a></i>).</p></div></div><div id='dcl.fct.default'><h3 ><a class='secnum' href='#dcl.fct.default' style='min-width:103pt'>8.3.6</a> Default arguments <a class='abbr_ref' href='dcl.fct.default'>[dcl.fct.default]</a></h3><p ><span class='indexparent'><a class='index' id='declaration,default_argument'></a></span></p><div class='para' id='dcl.fct.default-1'><div class='marginalizedparent'><a class='marginalized' href='#dcl.fct.default-1'>1</a></div><p >If an <i ><a href='dcl.init#nt:initializer-clause'>initializer-clause</a></i> is specified in a
 <i ><a href='dcl.fct#nt:parameter-declaration'>parameter-declaration</a></i> this
 <i ><a href='dcl.init#nt:initializer-clause'>initializer-clause</a></i>
 is used as a default argument.
@@ -1986,7 +1986,7 @@ since no size was specified and there are three initializers.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 An empty initializer list
 <span class='texttt'>{}</span>
-shall not be used as the <span class='grammarterm'>initializer-clause </span>
+shall not be used as the <i ><a href='dcl.init#nt:initializer-clause'>initializer-clause</a></i>
 for an array of unknown bound.<a class='footnotenum' href='#footnote-104'>104</a></p></div><div class='para' id='dcl.init.aggr-6'><div class='marginalizedparent'><a class='marginalized' href='#dcl.init.aggr-6'>6</a></div><p >Static data members and anonymous bit-fields are not considered
 members of the class for purposes of aggregate initialization.
 [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
@@ -2227,7 +2227,7 @@ the braces around the
 for a union member can be omitted if the
 union is a member of another aggregate.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-104'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-104'>104)</a></div><p >The syntax provides for empty
-<span class='grammarterm'>initializer-lists</span>,
+<i ><a href='dcl.init#nt:initializer-list'>initializer-lists</a></i>,
 but nonetheless C++ does not have zero length arrays.</p></div></div><div id='dcl.init.string'><h3 ><a class='secnum' href='#dcl.init.string' style='min-width:103pt'>8.6.2</a> Character arrays <a class='abbr_ref' href='dcl.init.string'>[dcl.init.string]</a></h3><p ><span class='indexparent'><a class='index' id='initialization,character_array'></a></span></p><div class='para' id='dcl.init.string-1'><div class='marginalizedparent'><a class='marginalized' href='#dcl.init.string-1'>1</a></div><p >An array of narrow character type (<a href='basic.fundamental'>[basic.fundamental]</a>),
 <span class='texttt'>char16_t</span> array,
 <span class='texttt'>char32_t</span> array,
