--- a/dcl.fct.html
+++ b/dcl.fct.html
@@ -291,6 +291,6 @@ a template parameter pack that has not been expanded or contains <span class='te
 otherwise, it is
 parsed as part of the <i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i>.<a class='footnotenum' href='#footnote-100'>100</a><span class='indexparent'><a class='index' id='declarator,function'></a></span></p></div><div class='footnote' id='footnote-99'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-99'>99)</a></div><p >As indicated by syntax, cv-qualifiers are a significant component in function return types.</p></div><div class='footnote' id='footnote-100'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-100'>100)</a></div><p >One can explicitly disambiguate the parse either by
 introducing a comma (so the ellipsis will be parsed as part of the
-<span class='grammarterm'>parameter-declaration-clause</span>) or by introducing a name for the
+<i ><a href='dcl.fct#nt:parameter-declaration-clause'>parameter-declaration-clause</a></i>) or by introducing a name for the
 parameter (so the ellipsis will be parsed as part of the
-<span class='grammarterm'>declarator-id</span>).</p></div></div></div></body></html>
+<i ><a href='dcl.decl#nt:declarator-id'>declarator-id</a></i>).</p></div></div></div></body></html>
