--- a/dcl.init.aggr.html
+++ b/dcl.init.aggr.html
@@ -81,7 +81,7 @@ since no size was specified and there are three initializers.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
 An empty initializer list
 <span class='texttt'>{}</span>
-shall not be used as the <span class='grammarterm'>initializer-clause </span>
+shall not be used as the <i ><a href='dcl.init#nt:initializer-clause'>initializer-clause</a></i>
 for an array of unknown bound.<a class='footnotenum' href='#footnote-104'>104</a></p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >Static data members and anonymous bit-fields are not considered
 members of the class for purposes of aggregate initialization.
 [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
@@ -322,5 +322,5 @@ the braces around the
 for a union member can be omitted if the
 union is a member of another aggregate.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-104'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-104'>104)</a></div><p >The syntax provides for empty
-<span class='grammarterm'>initializer-lists</span>,
+<i ><a href='dcl.init#nt:initializer-list'>initializer-lists</a></i>,
 but nonetheless C++ does not have zero length arrays.</p></div></div></div></body></html>
