--- a/dcl.spec.html
+++ b/dcl.spec.html
@@ -524,9 +524,9 @@ and
 <a href='temp.res'>[temp.res]</a>, respectively. The remaining
 <i ><a href='dcl.type#nt:type-specifier'>type-specifiers</a></i> are discussed in the rest of this section.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='footnote' id='footnote-94'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-94'>94)</a></div><p >There is no special
-provision for a <span class='grammarterm'>decl-specifier-seq</span> that
-lacks a <span class='grammarterm'>type-specifier</span> or that has a
-<span class='grammarterm'>type-specifier</span> that only specifies <span class='grammarterm'>cv-qualifiers</span>.
+provision for a <i ><a href='dcl.spec#nt:decl-specifier-seq'>decl-specifier-seq</a></i> that
+lacks a <i ><a href='dcl.type#nt:type-specifier'>type-specifier</a></i> or that has a
+<i ><a href='dcl.type#nt:type-specifier'>type-specifier</a></i> that only specifies <i ><a href='dcl.decl#nt:cv-qualifier'>cv-qualifiers</a></i>.
 The “implicit int” rule of C is no longer supported.</p></div><div id='dcl.type.cv'><h4 ><a class='secnum' href='#dcl.type.cv' style='min-width:118pt'>7.1.7.1</a> The <span class='grammarterm'>cv-qualifiers</span> <a class='abbr_ref' href='dcl.type.cv'>[dcl.type.cv]</a></h4><p ><span class='indexparent'><a class='index' id='specifier,cv-qualifier'></a></span><span class='indexparent'><a class='index' id='initialization,const'></a></span><span class='indexparent'><a class='index' id='type_specifier,const'></a></span><span class='indexparent'><a class='index' id='type_specifier,volatile'></a></span></p><div class='para' id='dcl.type.cv-1'><div class='marginalizedparent'><a class='marginalized' href='#dcl.type.cv-1'>1</a></div><p >There are two <span class='grammarterm'>cv-qualifiers</span>, <span class='texttt'>const</span> and
 <span class='texttt'>volatile</span>. Each <i ><a href='dcl.decl#nt:cv-qualifier'>cv-qualifier</a></i> shall appear at most once in
 a <i ><a href='dcl.decl#nt:cv-qualifier-seq'>cv-qualifier-seq</a></i>. If a <i ><a href='dcl.decl#nt:cv-qualifier'>cv-qualifier</a></i> appears in a
