--- a/expr.delete.html
+++ b/expr.delete.html
@@ -117,13 +117,13 @@ is used,
 the size of the block
 is passed as the corresponding argument.<a class='footnotenum' href='#footnote-83'>83</a></p></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><p >Access and ambiguity control are done for both the deallocation function
 and the destructor (<a href='class.dtor'>[class.dtor]</a>, <a href='class.free'>[class.free]</a>).</p></div><div class='footnote' id='footnote-80'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-80'>80)</a></div><p >A lambda expression with a
-<span class='grammarterm'>lambda-introducer</span> that consists of
+<i ><a href='expr.prim.lambda#nt:lambda-introducer'>lambda-introducer</a></i> that consists of
 empty square brackets can follow the <span class='texttt'>delete</span> keyword if the lambda expression is
 enclosed in parentheses.</p></div><div class='footnote' id='footnote-81'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-81'>81)</a></div><p >This implies that an object
 cannot be deleted using a pointer of type
 <span class='texttt'>void*</span> because <span class='texttt'>void</span> is not an object type.</p></div><div class='footnote' id='footnote-82'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-82'>82)</a></div><p >For non-zero-length
 arrays, this is the same as a pointer to the first
-element of the array created by that <span class='grammarterm'>new-expression</span>.
+element of the array created by that <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>.
 Zero-length arrays do not have a first element.</p></div><div class='footnote' id='footnote-83'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-83'>83)</a></div><p >If the static type of the object to be deleted is complete
 and is different from the dynamic type, and the destructor is not virtual, the size might
 be incorrect, but that case is already undefined, as stated above.</p></div></div></div></body></html>
