--- a/lex.name.html
+++ b/lex.name.html
@@ -37,10 +37,10 @@ an uppercase letter
 </p></li><li ><p >Each identifier that begins with an underscore is
 <span class='indexparent'><a class='index' id='character,underscore'></a></span>reserved to the implementation for use as a name in the global namespace.<span class='indexparent'><a class='index' id='namespace,global'></a></span>
 </p></li></ul></div><div class='footnote' id='footnote-20'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-20'>20)</a></div><p >On systems in which linkers cannot accept extended
-characters, an encoding of the <span class='grammarterm'>universal-character-name</span> may be used in
+characters, an encoding of the <i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i> may be used in
 forming valid external identifiers. For example, some otherwise unused
 character or sequence of characters may be used to encode the
-<span class='texttt'>\u</span> in a <span class='grammarterm'>universal-character-name</span>. Extended
+<span class='texttt'>\u</span> in a <i ><a href='lex.charset#nt:universal-character-name'>universal-character-name</a></i>. Extended
 characters may produce a long external identifier, but C++ does not
 place a translation limit on significant characters for external
 identifiers. In C++, upper- and lower-case letters are considered
