--- a/stmt.iter.html
+++ b/stmt.iter.html
@@ -12,7 +12,7 @@ An <i ><a href='stmt.stmt#nt:init-statement'>init-statement</a></i> ends with a 
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The substatement in an <i ><a href='stmt.iter#nt:iteration-statement'>iteration-statement</a></i> implicitly defines
 a block scope (<a href='basic.scope'>[basic.scope]</a>) which is entered and exited each time
 through the loop.</p><p ><span class='indexparent'><a class='index' id='scope,iteration-statement'></a></span>If the substatement in an iteration-statement is a single statement and
-not a <span class='grammarterm'>compound-statement,</span> it is as if it was rewritten to be
+not a <i ><a href='stmt.block#nt:compound-statement'>compound-statement</a></i>, it is as if it was rewritten to be
 a compound-statement containing the original statement.
 [&nbsp;<i>Example:</i><span class='space'></span></p><pre class='codeblock'>
 while (--x &gt;= 0)
