--- a/temp.param.html
+++ b/temp.param.html
@@ -266,9 +266,9 @@ template &lt;class... Types&gt; class Tuple;                <span class='comment
 template&lt;class... T, T... Values&gt; struct static_array;<span class='comment'>// error: <span class='texttt'>Values</span> expands template type parameter
 </span>                                                      <span class='comment'>// pack <span class='texttt'>T</span> within the same template parameter list
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-135'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-135'>135)</a></div><p >Since template
-<span class='grammarterm'>template-parameters</span>
+<i ><a href='temp.param#nt:template-parameter'>template-parameters</a></i>
 and template
-<span class='grammarterm'>template-arguments</span>
+<i ><a href='temp.names#nt:template-argument'>template-arguments</a></i>
 are treated as types for descriptive purposes, the terms
 <span class='grammarterm'>non-type parameter</span>
 and
